examples/fail/unexpected_token.uplp
category = "error"

[metadata]
error = "Parse.unexpected_token"

[metadata.expectation]
loc = 10
tok = "let"
---
let x = 1 let y = 2 in y 